--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Keywords -->
-    <meta name="Descripcion" content="">
+    <meta name="Description" content="Vendemos mates de madera pintados a mano con pintura acrilica. Varios modelos para elegir o se pintan a pedido. ">
     <meta name="keywords" content="mate, pintado, pintura, acrilica, cebar">
 
     <!-- Bootstrap -->
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="scss/Nav.css">
     <link rel="stylesheet" href="scss/Redes.css">
 
-    <title>MiMate</title>
+    <title>MiMate mates pintados a mano</title>
 </head>
 <body>
     <header>
